发送选中学生功能已完成

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,7 @@
             "args": [
                 "run",
                 "${file}"
+                // "index.py"
             ],
             "env": {
                 "PYTHONPATH": "${workspaceRoot}"
