调整了按钮布局，让多个按钮处在同一行。

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,8 +13,9 @@
             "program": "/home/vscode/.local/bin/streamlit",
             "args": [
                 "run",
-                "${file}"
-                // "index.py"
+                "${file}",
+                "--server.port",
+                "8888"
             ],
             "env": {
                 "PYTHONPATH": "${workspaceRoot}"
