--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
             "program": "/home/vscode/.local/bin/streamlit",
             "args": [
                 "run",
+                // "index.py"
                 "${file}",
                 "--server.port",
                 "8888"
