添加windows部署的文件

--- a/.devcontainer/docker-compose-win.yml
+++ b/.devcontainer/docker-compose-win.yml
@@ -4,8 +4,8 @@ services:
     build: ./
     container_name: liusu_streamlit
     ports:
-      - "8888:8888"
+      - "8899:8899"
     working_dir: "/workspaces/liusu"
     volumes:
-      - /Volumes/Extreme SSD/github/liusu:/workspaces/liusu
+      - D:\\github\\liusu:/workspaces/liusu
     command: "streamlit run auth.py --server.port 8899"
