--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -4,8 +4,9 @@ services:
     build: ./
     container_name: liusu_streamlit
     ports:
-      - "8888:8888"
+      - "8899:8899"
     working_dir: "/workspaces/liusu"
     volumes:
-      - /Volumes/Extreme SSD/github/liusu:/workspaces/liusu
+      # - /Volumes/Extreme SSD/github/liusu:/workspaces/liusu
+      - /Users/fedorov/Documents/GitHub/liusu:/workspaces/liusu
     command: "streamlit run auth.py --server.port 8899"
