--- a/.devcontainer/docker-compose-m2.yml
+++ b/.devcontainer/docker-compose-m2.yml
@@ -7,5 +7,5 @@ services:
       - "8899:8899"
     working_dir: "/workspaces/liusu"
     volumes:
-      - /Users/fedorov/Documents/GitHub/liusu:/workspaces/liusu
+      - /Volumes/Extreme SSD/github/liusu:/workspaces/liusu
     command: "streamlit run auth.py --server.port 8899"
