nothing change, it work!

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,59 +2,41 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.234.0/containers/python-3
 {
 	"name": "liusu_Python 3",
-	// "dockerComposeFile": "docker-compose.yml",
-	// "service": "mxonline-server",
-	// "shutdownAction": "stopCompose",
-	"build": {
-		"dockerfile": "Dockerfile",
-		"context": ".",
-		"args": {
-			// Update 'VARIANT' to pick a Python version: 3, 3.10, 3.9, 3.8, 3.7, 3.6
-			// Append -bullseye or -buster to pin to an OS version.
-			// Use -bullseye variants on local on arm64/Apple Silicon.
-			"VARIANT": "3.10-buster",
-			// Options
-			"NODE_VERSION": "none"
-		}
-	},
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-	// Configure tool-specific properties.
+	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+	"image": "mcr.microsoft.com/devcontainers/python:0-3.11",
+	// Set *default* container specific settings.json values on container create.
 	"customizations": {
+		// Configure properties specific to VS Code.
 		"vscode": {
+			"settings": {
+				"python.defaultInterpreterPath": "/usr/local/bin/python",
+				"python.linting.enabled": true,
+				"python.linting.pylintEnabled": true,
+				"python.formatting.autopep8Path": "/usr/local/py-utils/bin/autopep8",
+				"python.formatting.blackPath": "/usr/local/py-utils/bin/black",
+				"python.formatting.yapfPath": "/usr/local/py-utils/bin/yapf",
+				"python.linting.banditPath": "/usr/local/py-utils/bin/bandit",
+				"python.linting.flake8Path": "/usr/local/py-utils/bin/flake8",
+				"python.linting.mypyPath": "/usr/local/py-utils/bin/mypy",
+				"python.linting.pycodestylePath": "/usr/local/py-utils/bin/pycodestyle",
+				"python.linting.pydocstylePath": "/usr/local/py-utils/bin/pydocstyle",
+				"python.linting.pylintPath": "/usr/local/py-utils/bin/pylint",
+				"workbench.colorTheme": "Tomorrow Night Blue",
+				"editor.fontSize": 18
+			},
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
 				"ms-python.python",
 				"ms-python.vscode-pylance",
-				"ms-python.black-formatter",
-				"hlrossato.vscode-drf",
-				"akamud.vscode-theme-onedark",
-				"thebarkman.vscode-djaneiro",
-				"BenjaminBenais.copilot-theme"
+				"ms-python.black-formatter"
 			]
 		}
 	},
-	// 声明容器内使用的端口
-	// "appPort": [
-	// 	8000
-	// ],
-	// // Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// // 外部端口
-	// "forwardPorts": [
-	// 	8000
-	// ],
-	"runArgs": [
-		"-p",
-		"8899:8899",
-		"-it",
-		"--rm",
-		"-e",
-		"DOCKER_HOST=0.0.0.0"
-	], // 使用 0.0.0.0 解除绑定
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// pip3 升级、设置清华源、安装requirements.txt中的依赖包
-	// "postCreateCommand": "pip3 install --upgrade pip && pip3 config set global.index-url https:\/\/pypi.tuna.tsinghua.edu.cn\/simple",
-	// "postCreateCommand": "ln -s /usr/lib/python3.11  /workspaces/yuejuan_drf/python3.11 && ln -s /usr/lib/python3.11/site-packages /workspaces/yuejuan_drf/site-packages",
+	"postCreateCommand": "pip3 install --upgrade pip && pip3 config set global.index-url https:\/\/pypi.tuna.tsinghua.edu.cn\/simple && pip3 install --user -r requirements.txt",
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "root"
+	"remoteUser": "vscode"
 }
