--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,13 @@
 {
-    "[python]": {
-        "editor.defaultFormatter": "ms-python.black-formatter",
-        "editor.formatOnSave": true
-    },
-
-    "python.formatting.provider": "none",
-    "workbench.colorTheme": "Atom One Dark",
-    "python.analysis.autoSearchPaths": true,
-    "python.autoComplete.extraPaths": [
-        "/usr/lib/python3.11/site-packages",
-        "/usr/lib/python3.11/"
-    ],
-    "python.analysis.extraPaths": [
-        "/usr/lib/python3.11/site-packages",
-        "/usr/lib/python3.11/"
-    ]
+	"python.defaultInterpreterPath": "/usr/local/bin/python",
+	"workbench.colorTheme": "Copilot Theme",
+	"editor.fontSize": 20,
+	"editor.formatOnType": true,
+	"[python]":{
+		"editor.defaultFormatter": "ms-python.black-formatter",
+	},
+	
+	"[json]": {
+		"editor.defaultFormatter": "ClemensPeters.format-json"
+	}
 }
