--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,56 @@
-openpyxl
-pandas
-streamlit
-sqlalchemy
-streamlit-aggrid
-streamlit_authenticator
+altair==5.5.0
+attrs==25.3.0
+bcrypt==5.0.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.3.0
+et_xmlfile==2.0.0
+extra-streamlit-components==0.1.71
+gitdb==4.0.12
+GitPython==3.1.45
+greenlet==3.2.4
+idna==3.10
+importlib-metadata==6.11.0
+Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+narwhals==2.5.0
+numpy==1.26.4
+openpyxl==3.1.5
+packaging==23.2
+pandas==2.3.2
+pillow==10.4.0
+protobuf==4.25.8
+pyarrow==21.0.0
+pydeck==0.9.1
+Pygments==2.19.2
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+pytz==2025.2
+PyYAML==6.0.3
+referencing==0.36.2
+requests==2.32.5
+rich==13.9.4
+rpds-py==0.27.1
+six==1.17.0
+smmap==5.0.2
+SQLAlchemy==2.0.23
+streamlit==1.29.0
+streamlit-aggrid==0.3.4.post3
+streamlit-authenticator==0.2.3
+tenacity==8.5.0
+toml==0.10.2
+tornado==6.5.2
+typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.5.0
+validators==0.35.0
+watchdog==6.0.0
+zipp==3.23.0
